@@ -1,3 +1,9 @@
+2023-03-19 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3567.c:
+	  Fix bug #3567.
+
 2023-03-16 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/pdk/gen.c,
